--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -8,6 +8,6 @@ $light:     #f8f9fa;
 $dark:      #343a40;
 
 $text-black: #343a40;
-$text-white: rgba(white, .9);
+$text-white: #ffffff;
 
 $rounded-borders: 15px;
